--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
 annotated-types==0.6.0
 blis==0.7.11
 catalogue==2.0.10
@@ -7,7 +8,6 @@ click==8.1.7
 cloudpathlib==0.16.0
 confection==0.1.4
 cymem==2.0.8
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 idna==3.6
 Jinja2==3.1.3
 langcodes==3.3.0
