--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
 annotated-types==0.6.0
 blis==0.7.11
 catalogue==2.0.10
@@ -20,9 +19,6 @@ pydantic==2.6.4
 pydantic_core==2.16.3
 requests==2.31.0
 smart-open==6.4.0
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
 srsly==2.4.8
 thinc==8.2.3
 tqdm==4.66.2
@@ -31,3 +27,4 @@ typing_extensions==4.10.0
 urllib3==2.2.1
 wasabi==1.1.2
 weasel==0.3.4
+Levenshtein
