--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ confection==0.1.4
 cymem==2.0.8
 idna==3.6
 Jinja2==3.1.3
+joblib==1.3.2
 langcodes==3.3.0
 MarkupSafe==2.1.5
 murmurhash==1.0.10
@@ -18,10 +19,12 @@ preshed==3.0.9
 pydantic==2.6.4
 pydantic_core==2.16.3
 requests==2.31.0
-sklearn==0.0.post1
+scikit-learn==1.4.1.post1
+scipy==1.12.0
 smart-open==6.4.0
 srsly==2.4.8
 thinc==8.2.3
+threadpoolctl==3.4.0
 tqdm==4.66.2
 typer==0.9.4
 typing_extensions==4.10.0
