--- a/requirements.txt
+++ b/requirements.txt
@@ -9,8 +9,6 @@ click==8.1.7
 cloudpathlib==0.16.0
 confection==0.1.4
 cymem==2.0.8
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 futures==2.2.0
 goslate==1.5.4
 idna==3.6
@@ -27,9 +25,6 @@ PyDictionary==2.0.1
 requests==2.31.0
 smart-open==6.4.0
 soupsieve==2.5
-spacy==3.7.4
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
 srsly==2.4.8
 thinc==8.2.3
 tqdm==4.66.2
@@ -38,3 +33,5 @@ typing_extensions==4.10.0
 urllib3==2.2.1
 wasabi==1.1.2
 weasel==0.3.4
+genism==4.0.1
+scikit-learn==0.24.2
