--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "functions": {
       "api/index.py": {
         "memory": 3008,
-        "maxDuration": 10
+        "maxDuration": 10,
+        "runtime": "python3.8"
       }
     },
     "headers": [
