--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,10 @@
 {
+    "version": 2,
     "functions": {
       "api/index.py": {
         "memory": 3008,
         "maxDuration": 10,
-        "runtime": "python3.8"
+        "runtime": "python3.9"
       }
     },
     "headers": [
