--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
     "api/index.py": {
       "memory": 3008,
       "maxDuration": 10,
-      "runtime": "vercel-python@0.5.0"
+      "runtime": "python3.9"
     }
   },
   "headers": [
