--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "functions": {
     "api/index.py": {
       "memory": 3008,
-      "maxDuration": 10,
-      "runtime": "python3.9"
+      "maxDuration": 10
     }
   },
   "headers": [
