--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,48 @@
-annotated-types==0.6.0
-beautifulsoup4==4.12.3
+annotated-types==0.7.0
 blis==0.7.11
-bs4==0.0.2
 catalogue==2.0.10
 certifi==2024.2.2
 charset-normalizer==3.3.2
 click==8.1.7
 cloudpathlib==0.16.0
-confection==0.1.4
+confection==0.1.5
+curated-tokenizers==0.0.9
+curated-transformers==0.1.1
 cymem==2.0.8
-en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.7.1/en_core_web_md-3.7.1-py3-none-any.whl
-futures==2.2.0
-goslate==1.5.4
-idna==3.6
-Jinja2==3.1.3
-langcodes==3.3.0
+en-core-web-trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.7.3/en_core_web_trf-3.7.3-py3-none-any.whl
+filelock==3.14.0
+fsspec==2024.5.0
+gensim==4.3.2
+idna==3.7
+Jinja2==3.1.4
+langcodes==3.4.0
+language_data==1.2.0
+marisa-trie==1.1.1
 MarkupSafe==2.1.5
+mpmath==1.3.0
 murmurhash==1.0.10
+networkx==3.2.1
 numpy==1.26.4
 packaging==24.0
 preshed==3.0.9
-pydantic==2.6.4
-pydantic_core==2.16.3
-PyDictionary==2.0.1
-requests==2.31.0
+pydantic==2.7.2
+pydantic_core==2.18.3
+regex==2024.5.15
+requests==2.32.3
+scipy==1.12.0
 smart-open==6.4.0
-soupsieve==2.5
 spacy==3.7.4
+spacy-curated-transformers==0.2.2
 spacy-legacy==3.0.12
 spacy-loggers==1.0.5
 srsly==2.4.8
+sympy==1.12.1
 thinc==8.2.3
-tqdm==4.66.2
+torch==2.2.2
+tqdm==4.66.4
 typer==0.9.4
-typing_extensions==4.10.0
+typing_extensions==4.12.1
 urllib3==2.2.1
-wasabi==1.1.2
+wasabi==1.1.3
 weasel==0.3.4
+wrapt==1.16.0
